made some ui changes, but can be changed later

--- a/client/src/components/NavBar.module.css
+++ b/client/src/components/NavBar.module.css
@@ -1,13 +1,21 @@
+/* Import Montserrat */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+
 .navbar {
   width: 220px;
   border-right: 2px solid #800020;
   padding: 1rem 1rem;
   background: #fff;
-  height: 100%;
+  height: 100vh; /* Full viewport height */
+  font-family: "Montserrat", sans-serif;
+
+  position: sticky;
+  top: 0; /* Sticks to the top of the viewport */
 }
 
 .menu {
   list-style: none;
+
   padding: 0;
   margin: 0;
 }
